1.16-3.1.7:
- Fixed a bug with the shield on some locales (Turkish)

1.16-3.1.6:
- Fix where preview of the support blocks would break due to wrong side

1.16-3.1.5:
- Updated to latest version of McJtyLib

1.16-3.1.4:
- Updated to latest version of McJtyLib

1.16-3.1.3:
- Updated to latest version of McJtyLib
- The hud for the Builder is full bright again making it easier to read

1.16-3.1.2:
- Fixed the shield so that it blocks more passive creatures (like villagers)

1.16-3.1.1:
- The builder and shield projector use a better fake player that matches the name of the real player if online
- Fixed xray problem with the support blocks
- The Builder will now also support the filter module for item collection

1.16-3.1.0:
- Small fix for mojang mappings
- The space chamber has been ported
- The Builder chunkloads again
- Added TOP support for the Builder, the Shield Projector and the Space Chamber Controller

1.16-3.0.17:
- The Builder and Shield will now (if possible) use a fake player with the same UUID as the player that placed the builder

1.16-3.0.16:
- Fix for McJtyLib update

1.16-3.0.15:
- Fixed a problem with the builder which was no longer able to break blocks

1.16-3.0.14:
- The Builder will now give a warning when it can't quarry a block to remind people that they might need to enable fake players

1.16-3.0.13:
- Fixed the shield template recipe. It only gave one template per craft

1.16-3.0.12:
- Fixed a problem with shapecards becoming somewhat inconsistant if they are upgraded in the middle of selecting an area using the two corner points

1.16-3.0.11:
- Fixed crashes with the Builder in combination with liquids

1.16-3.0.10:
- Fixed the shield. All render modes were broken

1.16-3.0.9:
- Safety fix for the builder so that it will no longer crash on blocks that do weird things (like the banner). Mining a banner caused a crash on servers

1.16-3.0.8:
- The shield projector is now infusable again